5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1723_2498.log
== SUBMITION (2019-05-09 11:27:23) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))
percA = pA / 100
percB = pB / 100
ano = 0
while(a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
print(ano)
-- EXECUTION TIME:
0.130407
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 5, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:50) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))
percA = pA / 100
percB = pB / 100
ano = 0
while (a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
print(ano)
-- EXECUTION TIME:
0.13152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 5, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:52) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))
percA = pA / 100
percB = pB / 100
ano = 0
while (a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
print(ano)
-- EXECUTION TIME:
0.138893
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 5, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:52) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))
percA = pA / 100
percB = pB / 100
ano = 0
while (a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
print(ano)
-- EXECUTION TIME:
0.20141
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 5, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:27:55) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))
percA = pA / 100
percB = pB / 100
ano = 0
while (a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
print(ano)
-- EXECUTION TIME:
0.178332
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 5, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:28:09) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))
percA = pA / 100
percB = pB / 100
ano = 0
while (a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1
	print(ano)
-- EXECUTION TIME:
0.118537
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 5, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-09 11:28:54) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))

percA = pA / 100
percB = pB / 100

ano = 0

while (a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1

print(ano)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:28:58) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))

percA = pA / 100
percB = pB / 100

ano = 0

while (a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1

print(ano)
-- EXECUTION TIME:
0.150248
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1723/2498/main.py", line 6, in <module>
    percA = pA / 100
NameError: name 'pA' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 11:29:39) 
-- CODE:
a = int(input("hab1: "))
b = int(input("hab2: "))
p1 = float(input("pA: "))
p2 = float(input("pB: "))

percA = p1 / 100
percB = p2 / 100

ano = 0

while (a < b):
	a = a + (a * percA)
	b = b + (b * percB)
	ano = ano + 1

print(ano)
-- EXECUTION TIME:
0.21111
-- TEST CASE 1:
---- input:
250150
580000
35.5
10.5
---- correct output:
5
---- user output:
5
-- TEST CASE 2:
---- input:
180250
1200000
10.25
5.7
---- correct output:
45
---- user output:
45
-- TEST CASE 3:
---- input:
1000000
1650000
12.75
3.2
---- correct output:
6
---- user output:
6
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
